add intro block and stile

--- a/base_scss/mean.scss
+++ b/base_scss/mean.scss
@@ -8,6 +8,9 @@ body {
   font-size: 1rem;
   color: $black;
 }
+h1,h2,h3,h4,h5,h6{
+  margin: 0;
+}
 
 *,
 *:before,
@@ -19,3 +22,6 @@ body {
 @import "header";
 @import "user";
 @import "nav";
+@import "intro";
+@import "social";
+@import "btn";
