add work blok and stille fo this blok

--- a/base_scss/btn.scss
+++ b/base_scss/btn.scss
@@ -1,7 +1,7 @@
 .btn {
   display: inline-block;
   vertical-align: top;
-  padding: 1.1rem 1.8rem;
+  padding: 1.05rem 1.7rem;
   min-width: 170px;
 
   border: 1px solid $gray;
@@ -29,5 +29,10 @@
   }
   + .btn {
     margin-left: 1rem;
+  }
+  &--sm{
+    font-size: .9rem;
+    font-weight: 700;
+    border-width: 2px;
   }
 }
