--- a/base_scss/intro.scss
+++ b/base_scss/intro.scss
@@ -31,11 +31,9 @@
     margin-bottom:25px;
 }
 .intro__photo{
-    width: 40%;
-    height: 90%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 1;
+    margin-left: auto;
+    display: block;
+    max-width: 30%;
+    height: auto;
     border-radius: 100px;
 }
