add about and footer

--- a/base_scss/mean.scss
+++ b/base_scss/mean.scss
@@ -33,7 +33,7 @@ h6 {
 @import "works";
 @import "work";
 @import "portfolio";
+@import "about";
+@import "footer";
 
-
-
-@import "helper"
+@import "helper";
