--- a/base_scss/btn.scss
+++ b/base_scss/btn.scss
@@ -2,7 +2,6 @@
   display: inline-block;
   vertical-align: top;
   padding: 1.05rem 1.7rem;
-  min-width: 170px;
 
   border: 1px solid $gray;
   border-radius: 30px;
@@ -31,6 +30,7 @@
     margin-left: 1rem;
   }
   &--sm{
+    min-width: 0;
     font-size: .9rem;
     font-weight: 700;
     border-width: 2px;
