--- a/css/mean.css
+++ b/css/mean.css
@@ -6,6 +6,8 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   color: #2b2a2c; }
+  body.no-scroll {
+    overflow: hidden; }
 
 h1,
 h2,
@@ -314,6 +316,105 @@ h6 {
         background-color: #BBBBCC;
         border-color: #BBBBCC;
         color: #2b2a2c; }
+
+.modal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 1rem;
+  overflow: auto;
+  background-color: rgba(43, 42, 44, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; }
+
+.modal__dialog {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  position: relative;
+  background-color: #ffffff; }
+
+.model__close {
+  width: 34px;
+  height: 34px;
+  padding: 0;
+  background: none;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 1;
+  transition: transform .2s linear; }
+  .model__close:hover {
+    transform: rotate(90deg); }
+
+.modal-work {
+  display: flex; }
+
+.modal-work__preview {
+  width: 65%;
+  position: relative;
+  overflow: hidden; }
+
+.modal-work__photo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate3d(-50%, -50%, 0); }
+
+.modal-work__content {
+  position: relative;
+  width: 35%;
+  padding: 3.4rem 6.6rem 1rem 1.7rem; }
+
+.modal-work__header {
+  margin-bottom: 2.2rem; }
+
+.modal-work__tittle {
+  margin-bottom: 0.2rem;
+  font-size: 2.12rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  font-weight: 700; }
+
+.modal-work__info {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #6a696b; }
+
+.modal-work__info-divider {
+  margin: 0 1rem; }
+
+.modal-work__text {
+  font-size: 0.8rem;
+  line-height: 2;
+  color: #6a696b;
+  font-weight: 300;
+  margin-bottom: 8.66rem; }
+
+.model-work__footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  padding: 0 1.8rem 1rem; }
+
+.model-work__btn {
+  padding: 0;
+  background: none;
+  border: 0;
+  font-family: inherit;
+  font-size: .94rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  cursor: pointer; }
 
 .text-centr {
   text-align: center; }
