--- a/base_scss/mean.scss
+++ b/base_scss/mean.scss
@@ -41,5 +41,8 @@ h6 {
 @import "footer";
 @import "modal";
 @import "modal-work";
+@import "modalcv";
+@import "contact";
+@import "form";
 
 @import "helper";
