--- a/base_scss/modal.scss
+++ b/base_scss/modal.scss
@@ -1,7 +1,7 @@
 .modal{
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     padding: 1rem;
     overflow: auto;
 
@@ -11,6 +11,9 @@
     top: 0;
     left: 0;
     z-index: 1000;
+    &.show{
+        display: flex;
+    }
 }
 
 .modal__dialog{
@@ -20,6 +23,10 @@
     position: relative;
 
     background-color:$white;
+
+    &--sm{
+        max-width: 900px;
+    }
 }
 .model__close{
     width: 34px;
