--- a/base_scss/modal-work.scss
+++ b/base_scss/modal-work.scss
@@ -6,14 +6,18 @@
   width: 65%;
   position: relative;
   overflow: hidden;
+  //border: 2px solid $black;
 }
 .modal-work__photo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
+  display: flex;
+  //max-width: 100%;
+  height: auto;
+  //position: absolute;
+  //top: 50%;
+  //left: 50%;
+  //z-index: 1;
 
-  transform: translate3d(-50%, -50%, 0);
+  //transform: translate3d(-50%, -50%, 0);
 }
 .modal-work__content {
   position: relative;
@@ -47,25 +51,24 @@
   margin-bottom: 8.66rem;
 }
 
-.model-work__footer{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    padding: 0 1.8rem 1rem;
+.model-work__footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  padding: 0 1.8rem 1rem;
 }
-.model-work__btn{
-    padding: 0;
-    background:none;
-    border:0;
+.model-work__btn {
+  padding: 0;
+  background: none;
+  border: 0;
 
-    font-family: inherit;
-    font-size: .94rem;
-    color:$black;
-    text-transform: uppercase;
-    cursor: pointer;
-
+  font-family: inherit;
+  font-size: 0.94rem;
+  color: $black;
+  text-transform: uppercase;
+  cursor: pointer;
 }
