--- a/css/mean.css
+++ b/css/mean.css
@@ -364,11 +364,8 @@ h6 {
   overflow: hidden; }
 
 .modal-work__photo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
-  transform: translate3d(-50%, -50%, 0); }
+  display: flex;
+  height: auto; }
 
 .modal-work__content {
   position: relative;
@@ -415,7 +412,7 @@ h6 {
   background: none;
   border: 0;
   font-family: inherit;
-  font-size: .94rem;
+  font-size: 0.94rem;
   color: #2b2a2c;
   text-transform: uppercase;
   cursor: pointer; }
